tests/NormalTests/paczka1/fuzzy1/69139172.err
Error in line 1: alVpS S237 67,9
Error in line 9: Rv4PeWW S237 13,8
Error in line 23: alVpS A427 40,67
Error in line 8: Rb2BBr2Aq S237 96,5
Error in line 18: pR4nHe1PKF S910 37,0
Error in line 25: pR4nHe1PKF S237 34,3
Error in line 30: pR4nHe1PKF A427 55,2
Error in line 38: A610 S237 8,5
